@@ -1,7 +1,7 @@
 #
 # $FreeBSD: ports/games/mvdsv/files/Makefile,v 1.1 2003/06/03 19:36:13 fjoe Exp $
 #
-# QuakeWorld/MVDSV and QWDTools Makefile for FreeBSD
+# QuakeWorld/MVDSV and QWDTools Makefile for FreeBSD/Darwin/OpenBSD
 #
 #	- now should build on non-x86
 #	- no longer requires gmake(1)
@@ -10,7 +10,7 @@
 #
 # Created on Wednesday, May 21 2003 by Alexey Dokuchaev <danfe@regency.nsu.ru>
 #
-#	$Id: Makefile.FreeBSD,v 1.11 2005/07/15 15:53:20 vvd0 Exp $
+#	$Id: Makefile.FreeBSD,v 1.12 2005/09/14 14:20:02 vvd0 Exp $
 #
 
 CC=gcc
@@ -42,7 +42,11 @@ OSVERSION!=	/usr/sbin/sysctl -n kern.osreldate
 .   endif
 .  endif
 . else
+.  if ${UNAME} == OpenBSD
+OSVERSION = 500034
+.  else
 OSVERSION = 500035
+.  endif
 . endif
 
 . if ${OSVERSION} < 500035
